--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<!-- for now has slideshow at top of page -->
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
