--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,33 +1,15 @@
 <!DOCTYPE html>
+<!-- should make a website teaching how to make website OP -->
 <html>
 <!-- for now has slideshow at top of page -->
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
                 <title>{{ page.title }}</title>
-                </head>
+    </head>
     <body>
         <script src="http://code.jquery.com/jquery.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
-        <div id="myCarousel" class="carousel slide">
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-            <!-- Carousel items -->
-            <div class="carousel-inner">
-                {% for item in page.array limit:1 %}
-                <div class="active item">{{ item }}</div>
-                {% endfor %}
-                {% for item in page.array offset:1 %}
-                <div class="item">{{ item }}</div>
-                {% endfor %}
-            </div>
-            <!-- Carousel nav -->
-            <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-            <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-        </div>
         {{content}}
     </body>
 </html>
