bottom the page shows an example of prose-only gist

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,11 @@
     <body>
         <script src="http://code.jquery.com/jquery.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        
         {{content}}
+        <script src="https://gist.github.com/cncoleman/4923bc13f9a327c43c6b.js"></script>
+        <script src="https://gist.github.com/mjgonz/989a2fbfb1414a5ce678.js"></script>
+        {% include gistMod.html %}
+
     </body>
 </html>
