--- a/_layouts/slideshow.html
+++ b/_layouts/slideshow.html
@@ -39,25 +39,8 @@
     <body>
         <script src="http://code.jquery.com/jquery.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
-        <div id="myCarousel" class="carousel slide">
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-            <!-- Carousel items -->
-            <div class="carousel-inner">
-                {% for item in page.array limit:1 %}
-                <div class="active item">{{ item }}</div>
-                {% endfor %}
-                {% for item in page.array offset:1 %}
-                <div class="item">{{ item }}</div>
-                {% endfor %}
-            </div>
-            <!-- Carousel nav -->
-            <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-            <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-        </div>
+        {% include slides.html %}
         {{content}}
+        <script src="https://gist.github.com/cncoleman/4923bc13f9a327c43c6b.js"></script>
     </body>
 </html>
