Fixed google map embedding

--- a/_includes/gistMod.html
+++ b/_includes/gistMod.html
@@ -3,7 +3,7 @@ var gists = $('.markdown-body.js-file');
 for (var i = 0; i < gists.length; i++)
 {
   var g = gists[i];
-
+ // window[i] = g;
   document.write(g.innerHTML);
 }
 $('.gist').remove();
