--- a/_includes/gistcode.html
+++ b/_includes/gistcode.html
@@ -47,4 +47,25 @@
     <\/div>
 <\/div>
 document.write('<link rel="stylesheet" href="https://gist.github.com/assets/embed-e5645c091442041f85d7242d3e75c155.css">')
-document.write('<div id=\"gist6033894\" class=\"gist\">\n      <div class=\"gist-file\">\n        <div class=\"gist-data gist-syntax\">\n\n  <div class=\"readme context-loader-container context-loader-overlay\" id=\"readme\">\n    <article class=\"markdown-body js-file \"\n        data-task-list-update-url=\"/mjgonz/989a2fbfb1414a5ce678/file/README.md\">\n      <h1>\n<a name=\"downey-california\" class=\"anchor\" href=\"#downey-california\"><span class=\"mini-icon mini-icon-link\"><\/span><\/a>Downey, California<\/h1>\n    <\/article>\n  <\/div>\n\n\n\n        <\/div>\n\n        <div class=\"gist-meta\">\n          <a href=\"/mjgonz/989a2fbfb1414a5ce678/raw/d36d37e3c9e7514be5177efc18018d4e7801b308/README.md\" style=\"float:right\">view raw<\/a>\n          <a href=\"https://gist.github.com/mjgonz/989a2fbfb1414a5ce678#file-readme-md\" style=\"float:right; margin-right:10px; color:#666;\">README.md<\/a>\n          <a href=\"https://gist.github.com/mjgonz/989a2fbfb1414a5ce678\">This Gist<\/a> brought to you by <a href=\"https://github.com\">GitHub<\/a>.\n        <\/div>\n      <\/div>\n<\/div>\n')
+<div id=\"gist6033894\" class=\"gist\">
+    <div class=\"gist-file\">
+        <div class=\"gist-data gist-syntax\">
+            <div class=\"readme context-loader-container context-loader-overlay\" id=\"readme\">
+                 <article class=\"markdown-body js-file \" 
+                         data-task-list-update-url=\"/mjgonz/989a2fbfb1414a5ce678/file/README.md\">
+                        <h1> 
+                            <a name=\"downey-california\" class=\"anchor\" href=\"#downey-california\">
+                                <span class=\"mini-icon mini-icon-link\"><\/span>
+                            <\/a>
+                                Downey, California
+                        <\/h1>     
+                <\/article>
+           <\/div>  
+        <\/div>
+        <div class=\"gist-meta\">
+            <a href=\"/mjgonz/989a2fbfb1414a5ce678/raw/d36d37e3c9e7514be5177efc18018d4e7801b308/README.md\" style=\"float:right\">view raw<\/a> 
+            <a href=\"https://gist.github.com/mjgonz/989a2fbfb1414a5ce678#file-readme-md\" style=\"float:right; margin-right:10px; color:#666;\">README.md<\/a>
+            <a href=\"https://gist.github.com/mjgonz/989a2fbfb1414a5ce678\">This Gist<\/a> brought to you by <a href=\"https://github.com\">GitHub<\/a>.
+        <\/div>
+    <\/div>
+<\/div>
