--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<!-- should make a website teaching how to make website OP -->
 <html>
 <!-- for now has slideshow at top of page -->
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
                 <title>{{ page.title }}</title>
         {% include mapstyle.html %}
+        {% include wideslides.html %}
     </head>
     <body>
         <script src="http://code.jquery.com/jquery.js"></script>
