--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <!-- for now has slideshow at top of page -->
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+            <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
                 <title>{{ page.title }}</title>
         {% include mapstyle.html %}
         {% include wideslides.html %}
