added new people page

--- a/_includes/mapMarking.html
+++ b/_includes/mapMarking.html
@@ -17,7 +17,7 @@ geocoder.geocode(georeq, function (results, status)
             map: map,
             position: res.geometry.location
         });
-        // Load the station data. When the data comes back, create an overlay.
+/*        // Load the station data. When the data comes back, create an overlay.
 d3.json("usa.json", function(data) {
   var overlay = new google.maps.OverlayView();
 
@@ -64,7 +64,7 @@ d3.json("usa.json", function(data) {
 
   // Bind our overlay to the map…
   overlay.setMap(map);
-});
+});*/
 	}
 	else
 	{
