--- a/_includes/mapstyle.html
+++ b/_includes/mapstyle.html
@@ -2,9 +2,9 @@
 <style type="text/css">
 
 #map {
-  width: 1000px;
+  width: 75%;
   height: 500px;
-  margin: 50px;
+  margin-left: 10%;
   padding: 0;
 }
 /*
