Adding more team members, minor changes to layout

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,9 @@
 <nav role="navigation" id="site-nav" class="nav">
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/team/">People</a></li>
-        <li><a href="/labs-projects/">Labs &amp; Projects</a></li>
-        <li><a href="/about/">About</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="{{ site.url }}">Home</a></li>
+        <li><a href="{{ site.url }}/team/">People</a></li>
+        <li><a href="{{ site.url }}/labs-projects/">Labs &amp; Projects</a></li>
+        <li><a href="{{ site.url }}/about/">About</a></li>
+        <!-- <li><a href="">Contact</a></li> -->
       </ul>
 </nav>
