--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,14 +1,75 @@
 ---
-layout: page
-title: Sample Portfolio Layout
+layout: stanford-default
+title: Labs &amp; Projects
 ---
-<div class="span16">
-  <h1>Our Portfolio</h1>
+<h1>{{ page.title }}</h1>
 
+<img src="{{ site.url }}/assets/images/lab.png"/>
+
+<p class="lead">The Center for Spatial and Textual Analysis comprises three labs and affiliated projects</p>
+
+<div class="content-row">
+<h3>Labs</h3>
+
+<div class="col-md-4">
+<h2><a href="http://litlab.stanford.edu/">Literary Lab</a></h2>
+  <ul>
+    <li>Franco Moretti, Director</li>
+    <li>Ryan Heuser, Associate Director</li>
+    <li>Mark Algee-Hewitt, Associate Director</li>
+    <center><a href="http://litlab.stanford.edu" class="btn btn-default btn-xs">Visit the Literary Lab</a></center>
+  </ul>
+</div>
+
+<div class="col-md-4">
+<h2><a href="http://spatialhistory.stanford.edu">Spatial History Project</a></h2>
+<ul>
+  <li>Zephyr Frank, Director</li>
+  <li>Erik Steiner, Creative Director</li>
+  <center><a href="http://spatialhistory.stanford.edu" class="btn btn-default btn-xs">Visit the Spatial History Project</a></center>
+</ul>
+</div>
+
+<div class="col-md-4">
+<h2><a href="http://hdlab.stanford.edu">Humanities+Design</a></h2>
+<ul>
+  <li>Dan Edelstein, Director</li>
+  <li>Nicole Coleman</li>
+  <center><a href="http://dhlab.stanford.edu" class="btn btn-default btn-xs">Visit Humanities+Design</a></center>
+</ul>
+</div>
+
+</div>
+
+
+<div class="content-row">
+<h3>Projects</h3>
+
+<div class="col-md-4">
+<h2><a href="http://orbis.stanford.edu/">ORBIS</a></h2>
+  <ul>
+    <li>Walter Scheidel</li>
+    <li>Elijah Meeks</li>
+    <center><a href="http://orbis.stanford.edu" class="btn btn-default btn-xs">Explore ORBIS</a></center>
+  </ul>
+</div>
+
+<div class="col-md-4">
+<h2><a href="http://www.lacunastories.com/">Lacuna Stories</a></h2>
+  <ul>
+    <li>Amir Eshel</li>
+    <li>Brian Johnsrund</li>
+    <center><a href="http://lacunastories.com" class="btn btn-default btn-xs">Visit Lacuna Stories</a></center>
+  </ul>
+</div>
+
+</div>
+
+<!--
   <ul id="projects">
-    {% for project in page.projects %}
+    {% for project in page.labs %}
       <li class="project span5">
-        <a href="/portfolio/{{ project[0] }}">
+        <a href="/projects/{{ project[0] }}">
           {% if project[1].image %}
             <img src="{{ project[1].image.url }}" title="{{ project[1].image.title }}" alt="{{ project[1].image.alt }}" />
           {% endif %}
@@ -18,4 +79,21 @@ title: Sample Portfolio Layout
       </li>
     {% endfor %}
   </ul>
-</div>
+  </div>
+
+<div class="span5">
+  <h1>Projects</h1>
+  <ul id="projects">
+    {% for project in page.projects %}
+      <li class="project span5">
+        <a href="/projects/{{ project[0] }}">
+          {% if project[1].image %}
+            <img src="{{ project[1].image.url }}" title="{{ project[1].image.title }}" alt="{{ project[1].image.alt }}" />
+          {% endif %}
+
+          <p>{{ project[1].short }}</p>
+        </a>
+      </li>
+    {% endfor %}
+  </ul> -->
+
