Adding more team members

--- a/_layouts/stanford-default.html
+++ b/_layouts/stanford-default.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
-  <link href="{{site.url}}/assets/css/screen.css" rel="stylesheet" type="text/css">
+  <link href="/assets/css/screen.css" rel="stylesheet" type="text/css">
 
 <!-- Stanford branding -->
 <link href="{{ site.url }}/assets/css/su-identity.css" rel="stylesheet">
