--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -33,8 +33,8 @@ title: Labs &amp; Projects
 <div class="col-md-4">
 <h2><a href="http://hdlab.stanford.edu">Humanities+Design</a></h2>
 <ul>
-  <li>Dan Edelstein, Director</li>
-  <li>Nicole Coleman</li>
+  <li>Dan Edelstein, Faculty Director</li>
+  <li>Nicole Coleman, Staff Director</li>
   <center><a href="http://dhlab.stanford.edu" class="btn btn-default btn-xs">Visit Humanities+Design</a></center>
 </ul>
 </div>
@@ -55,11 +55,11 @@ title: Labs &amp; Projects
 </div>
 
 <div class="col-md-4">
-<h2><a href="http://www.lacunastories.com/">Lacuna Stories</a></h2>
+<h2>Poetics Media</h2>
   <ul>
     <li>Amir Eshel</li>
-    <li>Brian Johnsrund</li>
-    <center><a href="http://lacunastories.com" class="btn btn-default btn-xs">Visit Lacuna Stories</a></center>
+    <li>Brian Johnsrud</li>
+    <!-- <center><a href="http://lacunastories.com" class="btn btn-default btn-xs">Visit Lacuna Stories</a></center> -->
   </ul>
 </div>
 
