--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,8 @@
 	        <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
 	        <meta name="generator" content="Humanities+Design" />
 	        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	        <link href="{{ site.url }}/bootstrap/css/bootstrap.css" rel="stylesheet">
-	        <link href="{{ site.url }}/css/main.css" rel="stylesheet">
+	        <link href="{{ site.url }}/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
+	        <link href="{{ site.url }}/assets/css/main.css" rel="stylesheet">
 
 	        <!--[if lt IE 9]>
 	          <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
