--- a/_includes/banner_image.html
+++ b/_includes/banner_image.html
@@ -1,5 +1,5 @@
 {% for image in site.data.images %}
-{% if image.title  == page.project-name %}
+{% if image.tag == page.project-name %}
 
 <div class="widewrapper main">
       <img src="{{ site.banner-img-url }}{{ image.filename }}" class="img-responsive" alt="{{ image.alt-txt }}">
