--- a/_includes/presentations.html
+++ b/_includes/presentations.html
@@ -1,6 +1,6 @@
 <div class="row masonry">
 {% for presentation in site.data.presentations %}
- {% if presentation.topic  == 'palladio' %}
+ {% if presentation.topic  == '{{ page.presentation-topic }}' %}
  <div class="col-md-6">
     <div class="well">
      <div class="col-md-3">
