--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,20 +1,16 @@
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
+	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
+	<meta name="generator" content="ockham" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link href="{{ site.url }}/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
+	<link href="{{ site.url }}/assets/css/main.css" rel="stylesheet">
 
-	    <head>
-	        <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
-	        <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
-	        <meta name="generator" content="Humanities+Design" />
-	        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	        <link href="{{ site.url }}/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
-	        <link href="{{ site.url }}/assets/css/main.css" rel="stylesheet">
+	<!--[if lt IE 9]>
+	  <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
 
-	        <!--[if lt IE 9]>
-	          <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	        <![endif]-->
-
-<link href='http://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
-<link rel="shortcut icon" href="{{ site.url }}/assets/favicon.ico" type="image/x-icon">
-<link rel="icon" href="{{ site.url }}/assets/favicon.ico" type="image/x-icon">
-
-
-
-	    </head>
+	<link href='http://fonts.googleapis.com/css?family=News+Cycle:400,700' rel='stylesheet' type='text/css'>
+	<link rel="shortcut icon" href="{{ site.favicon }}" type="image/x-icon">
+	<link rel="icon" href="{{ site.favicon }}" type="image/x-icon">
+</head>
