simplify front, add cest_footer to default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,9 @@
 	<div class="container">
 	<div class="row wrap">
       {{ content }}
+    
     </div>
-
-	
-    {% include footer.html %}
+    {% include cesta_footer.html %}
 	</div>
 	<!-- /container -->
 	<!-- scripts-->
@@ -23,11 +22,6 @@
 	        <script type='text/javascript' src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
 
-
-
-
-
-	
 	
 		        <!-- JavaScript jQuery code from Bootply.com editor -->
 
