--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -1,40 +1,7 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+---
 
-  {% include head.html %}
-
-    <body>
-
-    {% include header.html %}
-	<!-- container -->
-	<div class="container">
-	<div class="row wrap">
-  {% include big-image.html %}
+  {% include banner_image.html %}
       {{ content }}
     {% include sidebar.html %}
-    </div>
-
-
-    {% include footer.html %}
-	</div>
-	<!-- /container -->
-	<!-- scripts-->
-	        <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-
-
-	        <script type='text/javascript' src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-
-
-
-		        <!-- JavaScript jQuery code from Bootply.com editor -->
-
-		        <script type='text/javascript'>
-
-		        $(document).ready(function() {
-
-		});
-
-	 <!-- /scripts-->
-
-    </body>
-</html>
